{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 14,
  "lineage": "35d058a7-94c3-7163-61e4-4c822f1110fb",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008c6427c8facbe08",
            "arn": "arn:aws:ec2:us-west-2:499191346827:instance/i-0cc2ccca55d394771",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc2ccca55d394771",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091beeaa0afa982e2",
            "private_dns": "ip-192-168-0-145.us-west-2.compute.internal",
            "private_ip": "192.168.0.145",
            "public_dns": "ec2-34-218-242-41.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.242.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d95373520374c099",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cad355a68e3ea48",
            "tags": {
              "Name": "test-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05cb79f42abba58bd"
            ]
          },
          "dependencies": [
            "module.mynetwork.aws_security_group.ssh",
            "module.mynetwork.aws_subnet.Public-subnet",
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f843cd74b0d70b4a",
            "owner_id": "499191346827",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060a447429f2dea11",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_table"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0266ed121e15a3c3a",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f843cd74b0d70b4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute-Table"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_internet_gateway.gw",
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0316a5ae97f4c0da3",
            "route_table_id": "rtb-060a447429f2dea11",
            "subnet_id": "subnet-0ea29f794440607ee"
          },
          "dependencies": [
            "module.mynetwork.aws_route_table.PrivateRT",
            "module.mynetwork.aws_subnet.Private-subnet",
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7c70ef39e8421e",
            "route_table_id": "rtb-0266ed121e15a3c3a",
            "subnet_id": "subnet-00cad355a68e3ea48"
          },
          "dependencies": [
            "module.mynetwork.aws_internet_gateway.gw",
            "module.mynetwork.aws_route_table.PublicRT",
            "module.mynetwork.aws_subnet.Public-subnet",
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-05c18d51c09e1f26a",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c18d51c09e1f26a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "for mysql",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-05cb79f42abba58bd",
            "description": "enable 22 port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cb79f42abba58bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable 22 port for ec2 ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "enable ssh",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enable-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-0ea29f794440607ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0ea29f794440607ee",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-04ea822295eceb11c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-04ea822295eceb11c",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet-1"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-00cad355a68e3ea48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-00cad355a68e3ea48",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-00fe3ec4254841d01"
          },
          "dependencies": [
            "module.mynetwork.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.mynetwork",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:vpc/vpc-00fe3ec4254841d01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08a5b7dfefe3ff113",
            "default_route_table_id": "rtb-0f563e1301edbc46d",
            "default_security_group_id": "sg-013c4b4fadcc4cc7c",
            "dhcp_options_id": "dopt-6757c91f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00fe3ec4254841d01",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f563e1301edbc46d",
            "owner_id": "499191346827",
            "tags": {
              "Name": "vpctf"
            }
          }
        }
      ]
    }
  ]
}